--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "test:unit": "jest --testMatch='**/unitarios/**/*.test.ts'",
     "test:unit:watch": "jest --testMatch='**/unitarios/**/*.test.ts' --watch",
     "test:integration": "jest --testMatch='**/integracion/**/*.test.ts' --runInBand",
+    "test:security": "vitest run --dir src",
+    "test:security:watch": "vitest --dir src",
     "test:e2e": "playwright test --config tests/setup/playwright.config.ts",
     "test:e2e:ui": "playwright test --config tests/setup/playwright.config.ts --ui",
     "test:e2e:headed": "playwright test --config tests/setup/playwright.config.ts --headed",
@@ -30,7 +32,9 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@modelcontextprotocol/sdk": "^1.18.2",
+    "@node-rs/argon2": "^2.0.2",
     "@prisma/client": "^5.18.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
@@ -44,7 +48,10 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.6.0",
     "recharts": "^2.12.7",
+    "reflect-metadata": "^0.2.2",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.5.2",
+    "tsyringe": "^4.10.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -57,16 +64,20 @@
     "@types/node": "20.14.12",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "^5.1.0",
+    "@vitest/ui": "^4.0.7",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-mock-extended": "^3.0.5",
+    "jsdom": "^27.1.0",
     "postcss": "8.4.47",
     "prisma": "^5.18.0",
     "tailwindcss": "3.4.13",
     "tsx": "^4.7.0",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "vitest": "^4.0.7"
   }
 }
