security: address exposed credentials and improve documentation
- Updated settings.local.json to allow check:secrets command.
- Revised CONFIGURACION-SUPABASE.md to clarify Supabase project details.
- Added INFORME-SEGURIDAD-URGENTE.md detailing exposed credentials and required actions.
- Created RESUMEN-CORRECCIONES-SEGURIDAD.md summarizing security fixes.
- Updated VERCEL_SETUP.md with new environment variable formats.
- Sanitized vercel-env-actualizado.md and vercel-env-config.md to use placeholders.
- Implemented check-secrets.js script to detect exposed credentials.
- Fixed TypeScript error in acciones.ts with proper type guard.
- Added fallback script for offline support.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prisma:studio": "prisma studio",
     "seed": "tsx prisma/seed.ts",
     "db:seed": "tsx prisma/seed.ts",
+    "check:secrets": "node scripts/check-secrets.js",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "jest --testMatch='**/unitarios/**/*.test.ts'",
     "test:unit:watch": "jest --testMatch='**/unitarios/**/*.test.ts' --watch",
